Animation, fixed alignment of svg

--- a/src/styles/Clock.css
+++ b/src/styles/Clock.css
@@ -1,19 +1,49 @@
+.clock-container {
+    width: 160px;
+    height: 160px;
+    position: relative;
+}
+
 .outer {
     border-radius: 50%;
-    height: inherit;
-    width: inherit;
-    padding: 50px;
+    height: 160px;
+    width: 160px;
+    padding: 20px;
     box-shadow: 6px 6px 10px -1px rgba(0,0,0,0.15), -6px -6px 10px -1px rgba(255,255,255,0.7);
-    z-index: 10;
+    /* z-index: 10; */
     justify-content: center;
+    align-items: center;
+    display: flex;
 }
 .inner {
     border-radius: 50%;
-    height: 100%;
-    width: 100%;
+    height: 140px;
+    width: 140px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
     box-shadow: inset 4px 4px 6px -1px rgba(0,0,0,0.2),
                 inset -4px -4px 6px -1px rgba(255,255,255,0.7),
                 -0.5px -0.5px 0px rgba(255,255,255,1),
                 0.5px 0.5px 0px rgba(0,0,0,0.15),
                 0px 12px 10px -10px rgba(0,0,0,0.05);
+}
+circle {
+    fill: none;
+    stroke: url(#GradientColor);
+    stroke-width: 30px;
+    stroke-dasharray: 472;
+    stroke-dashoffset: 472;
+    animation: anim 2s linear forwards;
+    
+}
+svg {
+    top: 0;
+    left: 0;
+    position: absolute;
+}
+@keyframes anim {
+    100% {
+        stroke-dashoffset: 165;
+    }
 }
